# rocshers_test_assignment

./: .coverage  .coveragerc  .gitignore  Makefile  Makefile.in.mk  README.md  pyproject.toml
.github/workflows/: python-app.yml
scripts/: detect_venv.py
src/: consts.py  runner.py
tests/: test_func.py
