[project]
name = "link-parser"
version = "0.1.0"
description = ""
authors = [{ name = "payne", email = "antilevski@tut.by" }]
requires-python = "~=3.7"
dependencies = [
    "pytest>=7.2.0,<8",
    "coverage>=6.5.0,<7",
    "pytest-cov>=4.0.0,<5",
]

[project.scripts]
main = "src.runner:main"

[dependency-groups]
dev = [
    "black>=22.10.0,<23",
    "isort>=5.10.1,<6",
]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
